--- a/task.html
+++ b/task.html
@@ -1,32 +1,21 @@
 <h5 style="text-align: center;" id="description" id="description">Description</h5>
 
-<p>Keep improving your bot by developing new skills for it. We suggest a simple guessing game that will predict the age of a user.</p>
-
-<p>It's based on a simple math trick. First, take a look at this formula:</p>
-
-<pre><code class="java">age = (remainder3 * 70 + remainder5 * 21 + remainder7 * 15) % 105</code></pre>
-
-<p>The numbers<code class="java">remainder3</code>, <code class="java">remainder5</code> and <code class="java">remainder7</code> are the remainders of division by 3, 5 and 7 respectively.</p>
-
-<p>It turns out that for each number ranging from <em>0</em> to <em>104</em> the calculation will result in the number itself. This perfectly fits the ordinary age range, doesn't it? Ask a user for the remainders and use them to guess the age!</p>
+<p>The greeting part is great, but chatbots are also supposed to interact with a user. It's time to implement this functionality.</p>
 
 <h5 style="text-align: center;" id="objective" id="objective">Objective</h5>
 
-<p>At this stage, you will introduce yourself to the bot. It will greet you by your name and then try to guess your age using arithmetic operations.</p>
+<p>At this stage, you will introduce yourself to the bot so that it can greet you by your name.</p>
 
 <p>Your program should print the following lines:</p>
 
 <pre><code class="language-no-highlight">Hello! My name is Aid.
 I was created in 2020.
 Please, remind me your name.
-What a great name you have, Max!
-Let me guess your age.
-Enter remainders of dividing your age by 3, 5 and 7.
-Your age is {your_age}; that's a good time to start programming!</code></pre>
+What a great name you have, {your_name}!</code></pre>
 
-<p>Read three numbers from the standard input. Assume that all the numbers will be given on separate lines.</p>
+<p>You may change the name and the creation year of your bot if you want.</p>
 
-<p>Instead of <code class="java">{your_age}</code>, the bot will print the age determined according to the special formula discussed above.</p>
+<p>Instead of <code class="java">{your_name}</code>, the bot must print your name entered from the standard input.</p>
 
 <h5 style="text-align: center;" id="example" id="example">Example</h5>
 
@@ -38,12 +27,6 @@ Your age is {your_age}; that's a good time to start programming!</code></pre>
 I was created in 2020.
 Please, remind me your name.
 &gt; Max
-What a great name you have, Max!
-Let me guess your age.
-Enter remainders of dividing your age by 3, 5 and 7.
-&gt; 1
-&gt; 2
-&gt; 1
-Your age is 22; that's a good time to start programming!</code></pre>
+What a great name you have, Max!</code></pre>
 
 <p>Use the provided template to simplify your work. You can change the text, but not the number of printed lines.</p>
